--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -18,15 +18,15 @@
     width: 65%;
     background: #fff;
     height: 450px;
-    padding: 5px 20px 20px 5px;
+    padding: 5px 20px;
 }
 .dash-div .row-1 {
     width: 100%;
     height: 50%;
 }
 .dash-div .avatar {
-    width: 200px;
-    height: 200px;
+    width: 180px;
+    height: 180px;
 }
 .dash-div .avatar img {
     width: 170px;
