--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,15 +4,15 @@
     <div class="modal-content">
         <form (ngSubmit)="onSubmit(loginForm)" novalidate class="form-signin" #loginForm="ngForm">
             <div *ngIf="(errors.error)" class="alert alert-danger">{{errors.text}}</div>
-            <input type="text" name="username" class="form-control" placeholder="Username"
+            <input type="text" name="username" class="form-control text-display input-def-h" placeholder="Username"
              required ngModel [ngClass]="{ 'alert-danger': (loginForm.form.dirty && !loginForm.form.value.username)}"/>
-           
-            <input type="password" name="password" class="form-control" placeholder="Password"
+
+            <input type="password" name="password" class="form-control text-display input-def-h" placeholder="Password"
             required ngModel [ngClass]="{ 'alert-danger': (loginForm.form.dirty && !loginForm.form.value.password)}"/>
 
             <button type="submit" class="btn btn-lg btn-outline-primary btn-block"
              [disabled]="!loginForm.form.valid || loginForm.form.pristine" [ngClass]="{'cur-p':loginForm.form.valid}">Login</button>
-             
+
             <button type="button" class="cur-p btn btn-link">Forgot Password?</button>
             <button type="button" class="cur-p btn btn-link">Register</button>
         </form>
